--- a/src/krasa/frameswitcher/FrameSwitcherGui.form
+++ b/src/krasa/frameswitcher/FrameSwitcherGui.form
@@ -119,7 +119,7 @@
           <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Load project icon"/>
+          <text value="Load project icon (disable to see an arrow at the current project)"/>
         </properties>
       </component>
       <component id="aa245" class="javax.swing.JCheckBox" binding="loadProjectIcon">
